crates/nyx-lexer/tests/snapshots/integration_tests__functions__definitions_pass.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: nop
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: always_true
- LParen
- RParen
- Arrow
- Bool
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: unit_work
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
