crates/nyx-lexer/tests/snapshots/integration_tests__functions__generic_scope_syntax.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: add
- Colon
- Colon
- LBracket
- Ident: T
- RBracket
- LParen
- Ident: a
- Colon
- Ident: T
- Comma
- Ident: b
- Colon
- Ident: T
- RParen
- Arrow
- Ident: T
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Add
- LBracket
- Ident: T
- RBracket
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: Seq
- LBracket
- Ident: T
- RBracket
- Colon
- Colon
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Indent
- Pass
- Newline
- Dedent
